<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#83787272"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_withdrawal"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:text="@string/text_enter_amount" />

                <EditText
                    android:id="@+id/dialog_withdraw_wallet"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <Button
                    android:id="@+id/dialog_cancel_wallet"
                    android:layout_width="0dip"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/text_cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/dialog_confirm_wallet"
                    android:layout_width="0dip"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/text_confirm"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
